@@ -1,57 +1,69 @@
 package org.broadinstitute.consent.http.service;
 
+import com.google.gson.Gson;
 import com.google.inject.Inject;
+
 import org.broadinstitute.consent.http.db.DarCollectionDAO;
+import org.broadinstitute.consent.http.db.DarCollectionSummaryDAO;
 import org.broadinstitute.consent.http.db.DataAccessRequestDAO;
 import org.broadinstitute.consent.http.db.DatasetDAO;
 import org.broadinstitute.consent.http.db.ElectionDAO;
+import org.broadinstitute.consent.http.db.MatchDAO;
 import org.broadinstitute.consent.http.db.VoteDAO;
+import org.broadinstitute.consent.http.enumeration.DarCollectionActions;
+import org.broadinstitute.consent.http.enumeration.DarCollectionStatus;
+import org.broadinstitute.consent.http.enumeration.DarStatus;
 import org.broadinstitute.consent.http.enumeration.ElectionStatus;
-import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
 import org.broadinstitute.consent.http.models.DarCollection;
+import org.broadinstitute.consent.http.models.DarCollectionSummary;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
 import org.broadinstitute.consent.http.models.DataAccessRequestData;
-import org.broadinstitute.consent.http.models.DataSet;
+import org.broadinstitute.consent.http.models.Dataset;
 import org.broadinstitute.consent.http.models.Election;
 import org.broadinstitute.consent.http.models.PaginationResponse;
 import org.broadinstitute.consent.http.models.PaginationToken;
 import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.models.UserRole;
-import org.broadinstitute.consent.http.models.Vote;
-import org.broadinstitute.consent.http.service.dao.DarCollectionServiceDAO;
 import org.broadinstitute.consent.http.resources.Resource;
+import org.broadinstitute.consent.http.service.dao.DarCollectionServiceDAO;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import javax.ws.rs.BadRequestException;
+import javax.ws.rs.NotAcceptableException;
+import javax.ws.rs.NotAuthorizedException;
 import javax.ws.rs.NotFoundException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
+import java.text.SimpleDateFormat;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
+import static java.util.stream.Collectors.toList;
 
 public class DarCollectionService {
 
   private final Logger logger = LoggerFactory.getLogger(this.getClass());
   private final DarCollectionDAO darCollectionDAO;
   private final DarCollectionServiceDAO collectionServiceDAO;
+  private final DarCollectionSummaryDAO darCollectionSummaryDAO;
   private final DataAccessRequestDAO dataAccessRequestDAO;
   private final DatasetDAO datasetDAO;
   private final ElectionDAO electionDAO;
   private final VoteDAO voteDAO;
-
+  private final MatchDAO matchDAO;
   private final EmailNotifierService emailNotifierService;
 
   @Inject
-  public DarCollectionService(DarCollectionDAO darCollectionDAO, DarCollectionServiceDAO collectionServiceDAO, DatasetDAO datasetDAO, ElectionDAO electionDAO, DataAccessRequestDAO dataAccessRequestDAO, EmailNotifierService emailNotifierService, VoteDAO voteDAO) {
+  public DarCollectionService(DarCollectionDAO darCollectionDAO, DarCollectionServiceDAO collectionServiceDAO, DatasetDAO datasetDAO, ElectionDAO electionDAO, DataAccessRequestDAO dataAccessRequestDAO, EmailNotifierService emailNotifierService, VoteDAO voteDAO, MatchDAO matchDAO, DarCollectionSummaryDAO darCollectionSummaryDAO) {
     this.darCollectionDAO = darCollectionDAO;
     this.collectionServiceDAO = collectionServiceDAO;
     this.datasetDAO = datasetDAO;
@@ -59,17 +71,289 @@ public class DarCollectionService {
     this.dataAccessRequestDAO = dataAccessRequestDAO;
     this.emailNotifierService = emailNotifierService;
     this.voteDAO = voteDAO;
+    this.matchDAO = matchDAO;
+    this.darCollectionSummaryDAO = darCollectionSummaryDAO;
+  }
+
+  private void updateStatusCount(Map<String, Integer> statusCount, String status) {
+    if(Objects.isNull(status)) {
+      //If the status is null, track it as Undefined to ensure election is accounted for
+      status = "Undefined";
+    }
+    Integer count = statusCount.get(status);
+    if(Objects.isNull(count)) {
+      statusCount.put(status, 0);
+      count = 0;
+    }
+    statusCount.put(status, count + 1);
+  }
+
+  private void determineCollectionStatus(DarCollectionSummary summary, Map<String, Integer> statusCount, Integer datasetCount, Integer electionCount) {
+    //If there are no elections, status is unreviewed
+    //if there are some elections open, status is in process
+    //if all elections are closed or canceled and electionCount == datasetCount, status is complete
+    if(electionCount.equals(0)) {
+      summary.setStatus(DarCollectionStatus.UNREVIEWED.getValue());
+    } else if(electionCount.equals(datasetCount)) {
+      Integer openCount = statusCount.get(ElectionStatus.OPEN.getValue());
+      if(Objects.isNull(openCount)) {
+        summary.setStatus(DarCollectionStatus.COMPLETE.getValue());
+      } else {
+        summary.setStatus(DarCollectionStatus.IN_PROCESS.getValue());
+      }
+    } else {
+      summary.setStatus(DarCollectionStatus.IN_PROCESS.getValue());
+    }
+  }
+
+  private void processDarCollectionSummariesForAdmin(List<DarCollectionSummary> summaries) {
+    //if at least one election is open, show cancel
+    //if at least one non-open/absent election, show open
+    summaries.forEach(s -> {
+      Map<String, Integer> statusCount = new HashMap<>();
+      Map<Integer, Election> elections = s.getElections();
+      if(elections.size() == 0) {
+        s.addAction(DarCollectionActions.OPEN.getValue());
+        s.setStatus(DarCollectionStatus.UNREVIEWED.getValue());
+      } else {
+        elections.values().forEach(e -> {
+          String status = e.getStatus();
+          updateStatusCount(statusCount, status);
+          if(status.equals(ElectionStatus.OPEN.getValue())) {
+            s.addAction(DarCollectionActions.CANCEL.getValue());
+          } else {
+            s.addAction(DarCollectionActions.OPEN.getValue());
+          }
+        });
+        determineCollectionStatus(s, statusCount, s.getDatasetCount(), s.getElections().size());
+      }
+    });
+  }
+
+  private void processDarCollectionDraftsAsSummaries(List<DataAccessRequest> drafts, List<DarCollectionSummary> summaries) {
+    drafts.forEach(d -> {
+      try{
+        summaries.add(processDraftAsSummary(d));
+      } catch(Exception e) {
+        logger.warn("Error processing draft with id: " + d.getId());
+      }
+    });
+  }
+
+  private DarCollectionSummary processDraftAsSummary(DataAccessRequest d) {
+    DarCollectionSummary summary = new DarCollectionSummary();
+    Date createDate = new Date(d.getData().getCreateDate());
+    String darCode = "DRAFT_DAR_" + new SimpleDateFormat("yyyy-MM-dd")
+            .format(createDate);
+
+    summary.setDarCode(darCode);
+    summary.setStatus(DarCollectionStatus.DRAFT.getValue());
+    summary.setName(d.getData().getProjectTitle());
+    summary.addAction(DarCollectionActions.RESUME.getValue());
+    summary.addAction(DarCollectionActions.DELETE.getValue());
+    summary.addReferenceId(d.referenceId);
+
+    return summary;
+  }
+
+  private void processDarCollectionSummariesForResearcher(List<DarCollectionSummary> summaries) {
+    //if an election exists, cancel does not appear
+    //if there are no elections, review and cancel are present
+    //if the collection is canceled, revise and review is present
+    Map<String, Integer> statusCount = new HashMap<>();
+    summaries.forEach(s -> {
+      Map<Integer, Election> elections = s.getElections();
+      int electionCount = elections.values().size();
+      elections.values().forEach(election -> updateStatusCount(statusCount, election.getStatus()));
+      s.addAction(DarCollectionActions.REVIEW.getValue());
+      //check dar statuses, if they're all canceled show revise (but only if there are no elections)
+      if(electionCount == 0) {
+        Collection<String> darStatuses = s.getDarStatuses().values();
+        Boolean isCanceled = darStatuses.size() > 0 && darStatuses.stream()
+          .allMatch(st -> st.equalsIgnoreCase(DarStatus.CANCELED.getValue()));
+        if(isCanceled) {
+          s.addAction(DarCollectionActions.REVISE.getValue());
+          s.setStatus(DarCollectionStatus.CANCELED.getValue());
+        } else {
+          s.addAction(DarCollectionActions.CANCEL.getValue());
+          s.setStatus(DarCollectionStatus.UNREVIEWED.getValue());
+        }
+      } else {
+        determineCollectionStatus(s, statusCount, s.getDatasetCount(), s.getElections().size());
+      }
+    });
+  }
+
+  private void processDarCollectionSumariesForMember(List<DarCollectionSummary> summaries) {
+    summaries.forEach(s -> {
+      Collection<Election> elections = s.getElections().values();
+        Integer electionCount = elections.size();
+        //if there are no elections present, unreviewed
+        //if there are elections present. in process
+        if(electionCount == 0) {
+          s.setStatus(DarCollectionStatus.UNREVIEWED.getValue());
+        } else {
+          Boolean isVotable = elections
+            .stream()
+            .anyMatch(election -> election.getStatus().equalsIgnoreCase(ElectionStatus.OPEN.getValue()));
+          
+          if(isVotable) {
+            s.setStatus(DarCollectionStatus.IN_PROCESS.getValue());
+            s.addAction(DarCollectionActions.VOTE.getValue());
+          } else {
+            //non-votable states
+              //all canceled (complete)
+              //some datasets do not have elections (in process)
+              //all voted on (complete)
+              //no elections 
+            if(electionCount < s.getDatasetCount()) {
+              s.setStatus(DarCollectionStatus.IN_PROCESS.getValue());
+            } else {
+              s.setStatus(DarCollectionStatus.COMPLETE.getValue());
+            }
+          }
+        }
+    });
+  }
+  
+
+  private void processDarCollectionSummariesForChair(List<DarCollectionSummary> summaries) {
+    summaries.forEach(s -> {
+      //if there are no elections, only show open
+      //if there is any closed or canceled elections, or if some datasets dont have an election, show open
+      //if there are any open elections, show cancel and vote
+      Map<String, Integer> statusCount = new HashMap<>();
+      Map<Integer, Election> elections = s.getElections();
+      if(elections.size() == 0) {
+        s.setStatus(DarCollectionStatus.UNREVIEWED.getValue());
+        s.addAction(DarCollectionActions.OPEN.getValue());
+      } else {
+        if (elections.size() < s.getDatasetCount()) {
+          s.addAction(DarCollectionActions.OPEN.getValue());
+        }
+        elections.values().forEach(election -> {
+          String statusString = election.getStatus();
+          updateStatusCount(statusCount, statusString);
+          ElectionStatus status = ElectionStatus.getStatusFromString(statusString);
+          switch (status) {
+            case CLOSED:
+            case CANCELED:
+              s.addAction(DarCollectionActions.OPEN.getValue());
+              break;
+            case OPEN:
+              s.addAction(DarCollectionActions.VOTE.getValue());
+            default:
+              break;
+          }
+        });
+        Integer closedCount = statusCount.get(ElectionStatus.CLOSED.getValue());
+        Integer openCount = statusCount.get(ElectionStatus.OPEN.getValue());
+        //add cancel if there are no closed elections and at least one open election
+        if(Objects.isNull(closedCount) && Objects.nonNull(openCount)) {
+          s.addAction(DarCollectionActions.CANCEL.getValue());
+        }
+
+        determineCollectionStatus(s, statusCount, s.getDatasetCount(), s.getElections().size());
+      }
+    });
+  }
+
+  private void processDarCollectionSummariesForSO(List<DarCollectionSummary> summaries) {
+    summaries.forEach(s -> {
+      Map<String, Integer> statusCount = new HashMap<>();
+      s.getElections().values().forEach(election -> updateStatusCount(statusCount, election.getStatus()));
+      determineCollectionStatus(s, statusCount, s.getDatasetCount(), s.getElections().size());
+    });
+  }
+
+  /**
+   * Find all DarCollectionSummaries for a given role name.
+   * Admins can see all summaries
+   * Chairs and Members can see summaries for datasets they have access to
+   * Signing Officials can see summaries for researchers in their institution
+   * Researchers can see only their own summaries
+   *
+   * @param user     The user making the request
+   * @param userRole The role the user is making the request as
+   * @return List of DarCollectionSummary objects
+   */
+  public List<DarCollectionSummary> getSummariesForRoleName(User user, String userRole) {
+    List<DarCollectionSummary> summaries = new ArrayList<>();
+    UserRoles role = UserRoles.getUserRoleFromName(userRole);
+    Integer userId = user.getUserId();
+    List<Integer> datasetIds;
+    switch (role) {
+      case ADMIN:
+        summaries = darCollectionSummaryDAO.getDarCollectionSummariesForAdmin();
+        processDarCollectionSummariesForAdmin(summaries);
+        break;
+      case SIGNINGOFFICIAL:
+        summaries = darCollectionSummaryDAO.getDarCollectionSummariesForSO(user.getInstitutionId());
+        processDarCollectionSummariesForSO(summaries);
+        break;
+      case CHAIRPERSON:
+        userId = user.getUserId();
+        datasetIds = datasetDAO.findDatasetsByUserId(userId).stream()
+            .map(d -> d.getDataSetId())
+            .collect(Collectors.toList());
+        summaries = darCollectionSummaryDAO.getDarCollectionSummariesForDAC(userId, datasetIds);
+        processDarCollectionSummariesForChair(summaries);
+        break;
+      case MEMBER:
+        userId = user.getUserId();
+        datasetIds = datasetDAO.findDatasetsByUserId(userId).stream()
+          .map(d -> d.getDataSetId())
+          .collect(Collectors.toList());
+          summaries = darCollectionSummaryDAO.getDarCollectionSummariesForDAC(userId, datasetIds);
+          processDarCollectionSumariesForMember(summaries);
+        break;
+      case RESEARCHER:
+        summaries = darCollectionSummaryDAO.getDarCollectionSummariesForResearcher(userId);
+        processDarCollectionSummariesForResearcher(summaries);
+        List<DataAccessRequest> drafts = dataAccessRequestDAO.findAllDraftsByUserId(userId);
+        processDarCollectionDraftsAsSummaries(drafts, summaries);
+        break;
+      default:
+        break;
+    }
+    return summaries;
+  }
+
+  public DarCollectionSummary updateCollectionToDraftStatus(DarCollection sourceCollection) {
+    this.dataAccessRequestDAO.updateDraftByCollectionId(sourceCollection.getDarCollectionId(), true);
+    sourceCollection.getDars().values().forEach((d) -> {
+      Date now = new Date();
+      DataAccessRequestData newData = new Gson().fromJson(d.getData().toString(), DataAccessRequestData.class);
+      newData.setDarCode(null);
+      newData.setStatus(null);
+      newData.setReferenceId(d.getReferenceId());
+      newData.setSortDate(now.getTime());
+      dataAccessRequestDAO.updateDataByReferenceId(
+              d.getReferenceId(),
+              d.getUserId(),
+              now,
+              null,
+              now,
+              newData
+      );
+    });
+
+
+    // get updated collection
+    sourceCollection = this.darCollectionDAO.findDARCollectionByCollectionId(sourceCollection.getDarCollectionId());
+
+    return this.processDraftAsSummary(new ArrayList<>(sourceCollection.getDars().values()).get(0));
   }
 
   public List<Integer> findDatasetIdsByUser(User user) {
-    return datasetDAO.findDataSetsByAuthUserEmail(user.getEmail())
+    return datasetDAO.findDatasetsByAuthUserEmail(user.getEmail())
         .stream()
-        .map(DataSet::getDataSetId)
+        .map(Dataset::getDataSetId)
         .collect(Collectors.toList());
   }
 
   public List<DarCollection> getAllCollections() {
-    return addDatasetsToCollections(darCollectionDAO.findAllDARCollections());
+    return addDatasetsToCollections(darCollectionDAO.findAllDARCollections(), List.of());
   }
 
   public List<DarCollection> getCollectionsForUserByRoleName(User user, String roleName) {
@@ -82,7 +366,7 @@ public class DarCollectionService {
           break;
         case CHAIRPERSON:
         case MEMBER:
-          collections.addAll(getCollectionsByUserDacs(user));
+          collections.addAll(getCollectionsByUserDacs(user, true));
           break;
         case SIGNINGOFFICIAL:
           collections.addAll(getCollectionsByUserInstitution(user));
@@ -93,16 +377,21 @@ public class DarCollectionService {
     } else {
       collections.addAll(getCollectionsForUser(user));
     }
-    return collections;
+    return collections.stream().filter(collection -> !containsCanceledDars(collection)).collect(Collectors.toList());
+  }
+
+  private boolean containsCanceledDars(DarCollection collection) {
+    return collection.getDars().values().stream().anyMatch(DataAccessRequest::isCanceled);
   }
 
   /**
    * Find all DAR Collections by the user's associated DACs
    *
    * @param user The User
+   * @param filterByUserDacDatasets Specifies whether to filter on user-DAC-datasets
    * @return List<DarCollection>
    */
-  public List<DarCollection> getCollectionsByUserDacs(User user) {
+  public List<DarCollection> getCollectionsByUserDacs(User user, Boolean filterByUserDacDatasets) {
     List<Integer> dacIds = user.getRoles().stream()
         .map(UserRole::getDacId)
         .filter(Objects::nonNull)
@@ -111,8 +400,13 @@ public class DarCollectionService {
     List<Integer> collectionIds = dacIds.isEmpty() ?
         Collections.emptyList() :
         darCollectionDAO.findDARCollectionIdsByDacIds(dacIds);
+    List<Integer> userDatasetsIds = filterByUserDacDatasets ?
+        datasetDAO.findDatasetsByAuthUserEmail(user.getEmail()).stream()
+                .map(Dataset::getDataSetId)
+                .collect(Collectors.toList()) :
+        Collections.emptyList();
     if (!collectionIds.isEmpty()) {
-      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds));
+      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), userDatasetsIds);
     }
     return Collections.emptyList();
   }
@@ -131,14 +425,14 @@ public class DarCollectionService {
     }
     List<Integer> collectionIds = darCollectionDAO.findDARCollectionIdsByInstitutionId(user.getInstitutionId());
     if (!collectionIds.isEmpty()) {
-      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds));
+      return addDatasetsToCollections(darCollectionDAO.findDARCollectionByCollectionIds(collectionIds), List.of());
     }
     return Collections.emptyList();
   }
 
   public List<DarCollection> getCollectionsForUser(User user) {
-    List<DarCollection> collections = darCollectionDAO.findDARCollectionsCreatedByUserId(user.getDacUserId());
-    return addDatasetsToCollections(collections);
+    List<DarCollection> collections = darCollectionDAO.findDARCollectionsCreatedByUserId(user.getUserId());
+    return addDatasetsToCollections(collections, List.of());
   }
 
   /*
@@ -195,18 +489,75 @@ public class DarCollectionService {
         collections = darCollectionDAO.getFilteredCollectionsForDACByCollectionIds(sortField, sortOrder, collectionIds, filterTerm);
         break;
       default:
-        collections = darCollectionDAO.getFilteredListForResearcher(sortField, sortOrder, user.getDacUserId(), filterTerm);
+        collections = darCollectionDAO.getFilteredListForResearcher(sortField, sortOrder, user.getUserId(), filterTerm);
     }
 
-    return addDatasetsToCollections(collections);
+    return addDatasetsToCollections(collections, List.of());
   }
 
   private List<Integer> getDacIdsFromUser (User user) {
     return user.getRoles().stream()
-            .filter(role -> Objects.nonNull(role.getDacId()))
             .map(UserRole::getDacId)
+            .filter(Objects::nonNull)
             .distinct()
             .collect(Collectors.toList());
+  }
+
+  public void deleteByCollectionId(User user, Integer collectionId) throws NotAcceptableException, NotAuthorizedException, NotFoundException {
+    DarCollection coll = darCollectionDAO.findDARCollectionByCollectionId(collectionId);
+    if (coll == null) {
+      throw new NotFoundException("DAR Collection does not exist at that id.");
+    }
+
+    // ensure the user is capable of deleting the collection
+    if (!user.hasUserRole(UserRoles.ADMIN) && !coll.getCreateUserId().equals(user.getUserId())) {
+      throw new NotAuthorizedException("Not authorized to delete DAR Collection.");
+    }
+
+    // get the reference ids of the dars in the collection
+    List<String> referenceIds =
+            coll.getDars().values().stream().map(DataAccessRequest::getReferenceId).distinct().collect(toList());
+
+    // ensure there are no elections; if there are, will attempt to delete (must be admin)
+    ensureNoElections(user, referenceIds);
+
+    // no elections left & user has perms => safe to delete collection
+
+    // delete DARs
+    matchDAO.deleteMatchesByPurposeIds(referenceIds);
+    dataAccessRequestDAO.deleteDARDatasetRelationByReferenceIds(referenceIds);
+    dataAccessRequestDAO.deleteByReferenceIds(referenceIds);
+
+    // delete collection
+    darCollectionDAO.deleteByCollectionId(collectionId);
+  }
+
+  // checks if there are any elections for any of the DARs in the referenceIds; if so,
+  // will attempt to delete them (must be admin to delete)
+  private void ensureNoElections(User user, List<String> referenceIds) throws NotAcceptableException {
+    // get elections across all reference ids
+    List<Election> allElections = electionDAO.findElectionsByReferenceIds(referenceIds);
+
+    // if there are already no elections, we're done!
+    if (allElections.isEmpty()) {
+      return;
+    }
+
+    // if there are any elections, we need to delete them.
+    // only admins can delete elections; make sure user is an admin
+    if (!user.hasUserRole(UserRoles.ADMIN)) {
+      throw new NotAcceptableException("Cannot delete DAR with elections.");
+    }
+
+    // delete all votes
+    voteDAO.deleteVotesByReferenceIds(referenceIds);
+
+    // delete all elections
+    List<Integer> electionIds = allElections.stream().map(Election::getElectionId).collect(toList());
+
+    electionDAO.deleteElectionsFromAccessRPs(electionIds);
+    electionDAO.deleteElectionsByIds(electionIds);
+
   }
 
   //Helper method for queryCollectionsByFiltersAndUserRoles
@@ -231,7 +582,7 @@ public class DarCollectionService {
         size = (Integer) darCollectionDAO.findDARCollectionIdsByDacIds(dacIds).size();
         break;
       default:
-        size = darCollectionDAO.returnUnfilteredResearcherCollectionCount(user.getDacUserId());
+        size = darCollectionDAO.returnUnfilteredResearcherCollectionCount(user.getUserId());
     }
     return size;
   }
@@ -241,7 +592,7 @@ public class DarCollectionService {
     if (Objects.isNull(collection)) {
       throw new NotFoundException("Collection with the reference id of " + referenceId + " was not found");
     }
-    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection));
+    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), List.of());
     return populatedCollections.stream().findFirst().orElse(null);
   }
 
@@ -250,30 +601,40 @@ public class DarCollectionService {
     if (Objects.isNull(collection)) {
       throw new NotFoundException("Collection with the collection id of " + collectionId + " was not found");
     }
-    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection));
+    List<DarCollection> populatedCollections = addDatasetsToCollections(Collections.singletonList(collection), List.of());
     return populatedCollections.stream().findFirst().orElse(null);
   }
 
-  public List<DarCollection> addDatasetsToCollections(List<DarCollection> collections) {
-
-    List<Integer> datasetIds = collections.stream()
-      .map(d-> d.getDars().values())
-      .flatMap(Collection::stream)
-      .map(d -> d.getData().getDatasetIds())
-      .flatMap(Collection::stream)
+  /**
+   * Iterate through a set of collections and add relevant datasets.
+   *
+   * @param collections  The list of DarCollections to iterate over.
+   * @param filterDatasetIds An optional list of Dataset Ids used to filter down the datasets for the collections
+   * @return List<DarCollection>
+   */
+  public List<DarCollection> addDatasetsToCollections(List<DarCollection> collections, List<Integer> filterDatasetIds) {
+    // get datasetIds from each DAR from each collection
+    List<String> referenceIds = collections.stream()
+      .map(DarCollection::getDars)
+      .map(Map::keySet)
+      .flatMap(Set::stream)
       .collect(Collectors.toList());
-
+    List<Integer> datasetIds = referenceIds.isEmpty() ? List.of() : dataAccessRequestDAO.findAllDARDatasetRelations(referenceIds);
     if(!datasetIds.isEmpty()) {
-      Set<DataSet> datasets = datasetDAO.findDatasetWithDataUseByIdList(datasetIds);
-      Map<Integer, DataSet> datasetMap = datasets.stream()
-          .collect(Collectors.toMap(DataSet::getDataSetId, Function.identity()));
+      // if filterDatasetIds has values, get the intersection between that and datasetIds
+      if (!filterDatasetIds.isEmpty()) {
+        datasetIds.retainAll(filterDatasetIds);
+      }
+      Set<Dataset> datasets = datasetDAO.findDatasetWithDataUseByIdList(datasetIds);
+      Map<Integer, Dataset> datasetMap = datasets.stream()
+          .collect(Collectors.toMap(Dataset::getDataSetId, Function.identity()));
 
       return collections.stream().map(c -> {
-        Set<DataSet> collectionDatasets = c.getDars().values().stream()
-          .map(DataAccessRequest::getData)
-          .map(DataAccessRequestData::getDatasetIds)
+        Set<Dataset> collectionDatasets = c.getDars().values().stream()
+          .map(DataAccessRequest::getDatasetIds)
           .flatMap(Collection::stream)
           .map(datasetMap::get)
+          .filter(Objects::nonNull) // filtering out nulls which were getting captured by map
           .collect(Collectors.toSet());
         DarCollection copy = c.deepCopy();
         copy.setDatasets(collectionDatasets);
@@ -328,7 +689,7 @@ public class DarCollectionService {
       dataAccessRequestDAO.cancelByReferenceIds(activeDarIds);
     }
 
-    return darCollectionDAO.findDARCollectionByCollectionId(collection.getDarCollectionId());
+    return getByCollectionId(collection.getDarCollectionId());
   }
 
   /**
@@ -366,14 +727,14 @@ public class DarCollectionService {
    */
   public DarCollection cancelDarCollectionElectionsAsChair(DarCollection collection, User user) {
     // Find dataset ids the chairperson has access to:
-    List<Integer> datasetIds = datasetDAO.findDataSetsByAuthUserEmail(user.getEmail())
+    List<Integer> datasetIds = datasetDAO.findDatasetsByAuthUserEmail(user.getEmail())
       .stream()
-      .map(DataSet::getDataSetId)
+      .map(Dataset::getDataSetId)
       .collect(Collectors.toList());
 
     // Filter the list of DARs we can operate on by the datasets accessible to this chairperson
     List<DataAccessRequest> dars = collection.getDars().values().stream()
-      .filter(d -> datasetIds.containsAll(d.getData().getDatasetIds()))
+      .filter(d -> datasetIds.containsAll(d.getDatasetIds()))
       .collect(Collectors.toList());
 
     List<String> referenceIds = dars.stream()
@@ -402,20 +763,13 @@ public class DarCollectionService {
    */
   public DarCollection createElectionsForDarCollection(User user, DarCollection collection) {
     try {
-      collectionServiceDAO.createElectionsForDarCollection(user, collection);
-      collection.getDars().values().forEach(dar -> {
-        Election accessElection = electionDAO.findLastElectionByReferenceIdAndType(dar.getReferenceId(), ElectionType.DATA_ACCESS.getValue());
-        if (Objects.nonNull(accessElection)) {
-          List<Vote> votes = voteDAO.findVotesByElectionId(accessElection.getElectionId());
-          try {
-            emailNotifierService.sendNewCaseMessageToList(votes, accessElection);
-          } catch (Exception e) {
-            logger.error("Unable to send new case message to DAC members for DAR: " + dar.getReferenceId());
-          }
-        } else {
-          logger.error("Did not find a created access election for DAR: " + dar.getReferenceId());
-        }
-      });
+      List<String> createdElectionReferenceIds = collectionServiceDAO.createElectionsForDarCollection(user, collection);
+      List<User> voteUsers = voteDAO.findVoteUsersByElectionReferenceIdList(createdElectionReferenceIds);
+      try {
+        emailNotifierService.sendDarNewCollectionElectionMessage(voteUsers, collection);
+      } catch (Exception e) {
+        logger.error("Unable to send new case message to DAC members for DAR Collection: " + collection.getDarCode());
+      }
     } catch (Exception e) {
       logger.error("Exception creating elections and votes for collection: " + collection.getDarCollectionId());
     }
@@ -424,7 +778,7 @@ public class DarCollectionService {
 
   // Private helper method to mark Elections as 'Canceled'
   private void cancelElectionsForReferenceIds(List<String> referenceIds) {
-    List<Election> elections = electionDAO.findLastElectionsByReferenceIds(referenceIds);
+    List<Election> elections = electionDAO.findOpenElectionsByReferenceIds(referenceIds);
     elections.forEach(election -> {
       if (!election.getStatus().equals(ElectionStatus.CANCELED.getValue())) {
         electionDAO.updateElectionById(election.getElectionId(), ElectionStatus.CANCELED.getValue(), new Date());
